CIRC-854: Fix compile errors.